added html and css and updated background pic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/");
+    background-image: url("../images/chocolateBackground.jpg");
     color: lightgray;
     font-family: 'Space Mono', monospace;
   }
